INT-6638,INT-6512: Fix collapsed search options

--- a/less/moodle/user.less
+++ b/less/moodle/user.less
@@ -139,6 +139,9 @@
 .iplookup #map {
     margin: auto;
 }
+body.path-admin-roles .userselector {
+    padding-bottom:2em;
+}
 .userselector select {
     width: 100%;
 }
